[gd_scene format=3 uid="uid://bjpplgltrpw3w"]

[ext_resource type="Script" uid="uid://o8bh0ja1y0ro" path="res://scenes/game_object/weapons/bow_attack/bow_attack.gd" id="1_7n7qr"]
[ext_resource type="Texture2D" uid="uid://ctc1aqnrat5u3" path="res://scenes/game_object/weapons/bow_attack/sprites/bow_idle.png" id="2_ivf3s"]
[ext_resource type="PackedScene" uid="uid://b71m46v4bx5ir" path="res://scenes/game_object/weapons/bow_attack/arrow/arrow.tscn" id="2_yraui"]
[ext_resource type="Texture2D" uid="uid://dq6afmp3lc3eh" path="res://resources/weapon/weapon_data/sprites/bow/bow_idle.png" id="3_0ttkw"]

[sub_resource type="Animation" id="Animation_yraui"]
length = 0.001
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/weapon_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.2),
"update": 0,
"values": [1.3089969]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"update_bow_texture"
}]
}

[sub_resource type="Animation" id="Animation_aatt0"]
resource_name = "attack"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/weapon_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [1.3089969, 0.7853981633974483]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.45000002),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_arrow"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.15, 0.2, 0.25, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [0],
"method": &"update_bow_texture"
}, {
"args": [1],
"method": &"update_bow_texture"
}, {
"args": [2],
"method": &"update_bow_texture"
}, {
"args": [-1],
"method": &"update_bow_texture"
}]
}

[sub_resource type="Animation" id="Animation_38rky"]
resource_name = "return"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/weapon_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(3.5, 1),
"update": 0,
"values": [0.7853982, 1.3089969389957472]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"update_bow_texture"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eg7nv"]
_data = {
&"RESET": SubResource("Animation_yraui"),
&"attack": SubResource("Animation_aatt0"),
&"return": SubResource("Animation_38rky")
}

[node name="bow_attack" type="Node2D" unique_id=338187465 node_paths=PackedStringArray("arrow_spawn", "weapon_sprite")]
script = ExtResource("1_7n7qr")
arrow_scene = ExtResource("2_yraui")
start_pos = Vector2(-2, -10)
arrow_spawn = NodePath("pivot/weapon_sprite/arrow_spawn")
original_scale = 1.5
attack_time = 0.6
return_time = 0.4
arrow_speed = 450.0
bow_idle_sprite = ExtResource("3_0ttkw")
weapon_sprite = NodePath("pivot/weapon_sprite")

[node name="animation_player" type="AnimationPlayer" parent="." unique_id=1443166583]
libraries/ = SubResource("AnimationLibrary_eg7nv")

[node name="pivot" type="Marker2D" parent="." unique_id=1127700142]

[node name="weapon_sprite" type="Sprite2D" parent="pivot" unique_id=327531569]
unique_name_in_owner = true
position = Vector2(5, 0)
rotation = 1.3089969
texture = ExtResource("2_ivf3s")

[node name="arrow_spawn" type="Node2D" parent="pivot/weapon_sprite" unique_id=95553356]
position = Vector2(-4.9497476, 4.9497476)
